--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="heading">
         <h1 class="title">
-          <a href="/">
+          <a href="/2048">
             <span>20</span>
             <span>48</span>
           </a>
